--- a/Artiste.html
+++ b/Artiste.html
@@ -54,7 +54,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROGRAMME<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="conference_pleniere.html">CONFÉRENCE PLENIÈRE</a></li>
+                            <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
                             <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
                             <li><a href="invites.html">ATELIERS</a></li>
@@ -63,9 +63,9 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="hebergement.html">HEBERGEMENT</a></li>
+                            <li><a href="hebergement.html">HÉBERGEMENT</a></li>
                             <li><a href="itineraire.html">ITINÉRAIRE</a></li>
-                            <li><a href="convoiturage.html">CONVOITURAGE</a></li>
+                            <li><a href="covoiturage.html">COVOITURAGE</a></li>
 
                             <li><a href="stationnement.html">STATIONNEMENT</a></li>
                             <li role="separator" class="divider"></li>
@@ -73,7 +73,7 @@
                         </ul>
                     </li>
                     <li><a href="inscription.html" class="white">INSCRIPTION</a></li>
-                    <li><a href="Ecoresponsabilite.html" class="white" id="eco_friendly">ECORESPONSABILITÉ</a></li>
+                    <li><a href="Ecoresponsabilite.html" class="white" id="eco_friendly">ÉCORESPONSABILITÉ</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -110,9 +110,10 @@
                 Etienne Saint-Amant est un artiste originaire de Sherbrooke, Québec, Canada. Son atelier de création est actuellement à Orford, dans les Cantons-de-l'Est. Ses ateliers de production sont à Sherbrooke et Montréal.
                 <br />
                 <br />
-                Visitez le <a href="https://chaoscopia.com">site</a> d'Étienne Saint-Amant
+                Visitez le <a href="https://chaoscopia.com">site</a> d'Étienne Saint-Amant.
 
-            </p>
+			</p>
+			
         </div>
 
     </div>
