--- a/conference_pleniere.html
+++ b/conference_pleniere.html
@@ -57,16 +57,16 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="hebergement.html">HEBERGEMENT</a></li>
+                            <li><a href="hebergement.html">HÉBERGEMENT</a></li>
                             <li><a href="itineraire.html">ITINÉRAIRE</a></li>
-                            <li><a href="convoiturage.html">CONVOITURAGE</a></li>
+                            <li><a href="covoiturage.html">COVOITURAGE</a></li>
                             <li><a href="stationnement.html">STATIONNEMENT</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="proche_cegep.html">LIEUX PROCHES DU CÉGEP</a></li>
                         </ul>
                     </li>
                     <li><a href="inscription.html" class="white">INSCRIPTION</a></li>
-                    <li><a href="Ecoresponsabilite.html" class="white" id="eco_friendly">ECORESPONSABILITÉ</a></li>
+                    <li><a href="Ecoresponsabilite.html" class="white" id="eco_friendly">ÉCORESPONSABILITÉ</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
