--- a/hebergement.html
+++ b/hebergement.html
@@ -48,7 +48,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROGRAMME<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="conference_pleniere.html">CONFÉRENCE PLENIÈRE</a></li>
+                            <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
                             <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
                             <li><a href="invites.html">ATELIERS</a></li>
@@ -57,9 +57,9 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="hebergement.html">HEBERGEMENT</a></li>
+                            <li><a href="hebergement.html">HÉBERGEMENT</a></li>
                             <li><a href="itineraire.html">ITINÉRAIRE</a></li>
-                            <li><a href="convoiturage.html">CONVOITURAGE</a></li>
+                            <li><a href="covoiturage.html">COVOITURAGE</a></li>
 
                             <li><a href="stationnement.html">STATIONNEMENT</a></li>
                             <li role="separator" class="divider"></li>
@@ -67,7 +67,7 @@
                         </ul>
                     </li>
                     <li><a href="inscription.html" class="white">INSCRIPTION</a></li>
-                    <li><a href="Ecoresponsabilite.html" class="white" id="eco_friendly">ECORESPONSABILITÉ</a></li>
+                    <li><a href="Ecoresponsabilite.html" class="white" id="eco_friendly">ÉCORESPONSABILITÉ</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
