--- a/conference_pleniere.html
+++ b/conference_pleniere.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-    <title>Accueil | Congrès AMQ 2019</title>
+    <meta charset="utf-8" />
+    <title>Accueil | CongrÃ¨s AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!--CSS general du site (peut etre enlever ceci)-->
-    <!--<link rel="stylesheet" href="styles/main.css" type="text/css" />-->
+    <link rel="stylesheet" href="css/bootstrap.css" />
+
+    <!--Couleur du theme aux versions mobiles-->
+    <meta name="theme-color" content="#EB5642" />
+
     <!--CSS General du site-->
     <link rel="stylesheet" href="styles/main.css" />
     <!--CSS de la page actuelle-->
@@ -27,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" id="navbar-space" href="index.html"><img src="assets/mini-logo.png" width="70" height="30" alt=""> </a>
+                <a href="index.html" id="navbar-space" class="navbar-left"><img src="assets/mini-logo.png"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
 
@@ -35,12 +38,12 @@
                 <ul class="nav navbar-nav">
                     <li><a href="index.html" class="white">ACCUEIL</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">INFORMATION GÉNÉRALE<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">INFORMATION GÃ‰NÃ‰RALE<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="nous_contacter.html">NOUS CONTACTER</a></li>
-                            <li><a href="Comite.html">COMITÉ ORGANISATEUR</a></li>
+                            <li><a href="Comite.html">COMITÃ‰ ORGANISATEUR</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="Apropos_AMQ.html">À PROPOS DE L'AMQ </a></li>
+                            <li><a href="Apropos_AMQ.html">Ã€ PROPOS DE L'AMQ </a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="commanditaires.html">COMMANDITAIRES</a></li>
                         </ul>
@@ -48,139 +51,144 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROGRAMME<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
-                            <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
-                            <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
-                            <li><a href="invites.html">ATELIERS</a></li>
+                            <li><a href="conference_pleniere.html">CONFÃ‰RENCE PLÃ‰NIÃˆRE</a></li>
+                            <li><a href="Artiste.html">ARTISTE INVITÃ‰</a></li>
+                            <li><a href="horaire.html">HORAIRE GÃ‰NÃ‰RAL</a></li>
+                            <li><a href="proposerUnAtelier.html">PROPOSER UN ATELIER</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÃˆS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="hebergement.html">HEBERGEMENT</a></li>
-                            <li><a href="itineraire.html">ITINÉRAIRE</a></li>
-                            <li><a href="convoiturage.html">CONVOITURAGE</a></li>
+                            <li><a href="itineraire.html">ITINÃ‰RAIRE</a></li>
+                            <li><a href="covoiturage.html">COVOITURAGE</a></li>
                             <li><a href="stationnement.html">STATIONNEMENT</a></li>
+                            <li><a href="hebergement.html">HÃ‰BERGEMENT</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="proche_cegep.html">LIEUX PROCHES DU CÉGEP</a></li>
+                            <li><a href="proche_cegep.html">LIEUX PROCHES DU CÃ‰GEP</a></li>
                         </ul>
                     </li>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ã‰CORESPONSABILITÃ‰<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="caractere.html">CARACTÃˆRE Ã‰CORESPONSABLE ET OBJECTIFS</a></li>
+                            <li><a href="commentSePreparer.html">COMMENT SE PRÃ‰PARER</a></li>
+                        </ul>
+                    </li>
+
                     <li><a href="inscription.html" class="white">INSCRIPTION</a></li>
-                    <li><a href="Ecoresponsabilite.html" class="white" id="eco_friendly">ECORESPONSABILITÉ</a></li>
+
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
 
-
-	<div class="page-standard" id="Denis-p1">
-        <h1>La conférence plénière</h1>
-        <div class="col-md-12 col-s-12 " id="texte-p1">
+    <div class="page-standard row" id="Denis-p1">
+        <h1>La confÃ©rence plÃ©niÃ¨re</h1>
+        <div class="col-md-12 col-s-12 ">
             <p class="txtDenis">
                 <img align="right" id="imgDenis" src="assets/DenisTanguay.jpg" />
-                Denis Tanguay est professeur au département de didactique des mathématiques au département de mathématiques de l’Université du Québec à Montréal. 
-				Il est l’actuel directeur de ce département. Denis est titulaire d’une maîtrise en didactique des mathématiques et d’un doctorat en Topologie des 
-				variétés de dimension 3. Notons qu’il avait également reçu le Prix du Conservatoire de musique de Montréal en clavecin ! Ses intérêts de 
-				recherche sont variés : 
-				<br />
-			</p>
-				
-					<ul id="Pleniere">
-						<li>enseignement et apprentissage de la preuve,</li>
-						<li>didactique de la géométrie, </li>
-						<li>didactique de l'algèbre linéaire,</li>
-						<li>transition secondaire – post-secondaire,</li>
-						<li>calculateurs symboliques (CAS) dans l'enseignement de l'algèbre de 3e et 4e secondaires.</li>
-					</ul>
-				<p class="txtDenis">
-					<br />
-					<!--le texte conserve le format calibri défini pour les listes dans main.css ... comprends pas... -->
-					Il a également édité les actes du Colloque de Groupe des didacticiens des mathématiques du Québec GDM 2005 
-					dont le titre rejoint le thème du congrès de l’AMQ de cette année : Raisonnement mathématique et formation citoyenne. 
-					<br />
-					<br />
-					Visitez le <a href="http://profmath.uqam.ca/~tanguay_d/">Site</a> de Denis.
-				</p>            
+                Denis Tanguay est professeur au dÃ©partement de didactique des mathÃ©matiques au dÃ©partement de mathÃ©matiques de lâ€™UniversitÃ© du QuÃ©bec Ã  MontrÃ©al.
+                Il est lâ€™actuel directeur de ce dÃ©partement. Denis est titulaire dâ€™une maÃ®trise en didactique des mathÃ©matiques et dâ€™un doctorat en Topologie des
+                variÃ©tÃ©s de dimension 3. Notons quâ€™il avait Ã©galement reÃ§u le Prix du Conservatoire de musique de MontrÃ©al en clavecin ! Ses intÃ©rÃªts de
+                recherche sont variÃ©s :
+            </p>
+            <ul class="listePleniere">
+                <li>enseignement et apprentissage de la preuve,</li>
+                <li>didactique de la gÃ©omÃ©trie, </li>
+                <li>didactique de l'algÃ¨bre linÃ©aire,</li>
+                <li>transition secondaire â€“ post-secondaire,</li>
+                <li>calculateurs symboliques (CAS) dans l'enseignement de l'algÃ¨bre de 3e et 4e secondaires.</li>
+            </ul>
+            <p class="txtDenis">
+                Il a Ã©galement Ã©ditÃ© les actes du Colloque de Groupe des didacticiens des mathÃ©matiques du QuÃ©bec GDM 2005
+                dont le titre rejoint le thÃ¨me du congrÃ¨s de lâ€™AMQ de cette annÃ©e : <i>Raisonnement mathÃ©matique et formation citoyenne</i>.
+                <br />
+                <br />
+                Visitez le <a href="http://profmath.uqam.ca/~tanguay_d/">site</a> de Denis.
+            </p>
         </div>
-
-        </a>
- 
     </div>
+    <footer class="page-footer">
+        <div class="footer">
+            <!-- Footer -->
+            <footer class="page-footer font-small blue pt-4">
 
+                <!-- Footer Links -->
+                <div class="container-fluid text-center text-md-left">
 
+                    <!-- Grid row -->
+                    <div class="row">
 
-
-
-
-
-
-
-    <div class="footer">
-        <!-- Footer -->
-        <footer class="page-footer font-small blue pt-4">
-            <!-- Footer Links -->
-            <div class="container-fluid text-center text-md-left">
-                <!-- Grid row -->
-                <div class="row">
-                    <!-- Grid column -->
-                    <div class="col-md-6 mt-md-0 mt-3">
-                        <!-- Content -->
-                        <h1 class="footer-congress" id="ftc-top">CONGRÈS</h1>
-                        <h1 class="footer-congress">AMQ 2019</h1>
-                    </div>
-                    <!-- Grid column -->
-                    <div id="footer-list">
                         <!-- Grid column -->
-                        <div class="col-md-3 mb-md-0 mb-3">
-                            <!-- Links -->
-                            <h5 class="text-uppercase">Links</h5>
-                            <ul class="list-unstyled">
-                                <li>
-                                    <a href="#!">Link 1</a>
-                                </li>
-                                <li>
-                                    <a href="#!">Link 2</a>
-                                </li>
-                                <li>
-                                    <a href="#!">Link 3</a>
-                                </li>
-                                <li>
-                                    <a href="#!">Link 4</a>
-                                </li>
-                            </ul>
+                        <div class="col-md-6 mt-md-0 mt-3">
+
+                            <!-- Content -->
+                            <h1 class="footer-congress" id="ftc-top">CONGRÃˆS</h1>
+                            <h1 class="footer-congress">AMQ 2019</h1>
+
                         </div>
                         <!-- Grid column -->
-                        <!-- Grid column -->
-                        <div class="col-md-3 mb-md-0 mb-3">
-                            <!-- Links -->
-                            <h5 class="text-uppercase">Links</h5>
-                            <ul class="list-unstyled">
-                                <li>
-                                    <a href="#!">Link 1</a>
-                                </li>
-                                <li>
-                                    <a href="#!">Link 2</a>
-                                </li>
-                                <li>
-                                    <a href="#!">Link 3</a>
-                                </li>
-                                <li>
-                                    <a href="#!">Link 4</a>
-                                </li>
-                            </ul>
+                        <div id="footer-list">
+                            <!-- Grid column -->
+                            <div class="col-md-3 mb-md-0 mb-3">
+
+                                <!-- Links -->
+                                <h5 class="text-uppercase">Liens Rapides</h5>
+
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <a href="index.html">Accueil</a>
+                                    </li>
+                                    <li>
+                                        <a href="horaire.html">Horaire GÃ©nÃ©ral</a>
+                                    </li>
+                                    <li>
+                                        <a href="caractere.html"> Ã‰coresponsabilitÃ©</a>
+                                    </li>
+                                    <li>
+                                        <a href="inscription.html">Inscription</a>
+                                    </li>
+                                </ul>
+
+                            </div>
+                            <!-- Grid column -->
+                            <!-- Grid column -->
+                            <div class="col-md-3 mb-md-0 mb-3">
+
+                                <!-- Links -->
+                                <h5 class="text-uppercase">Se rendre, nous joindre</h5>
+
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <a href="nous_contacter.html">Nous Contacter</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.facebook.com/AMQ2019/">Facebook</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.amq.math.ca/">Site Web AMQ</a>
+                                    </li>
+                                    <li>
+                                        <a href="itineraire.html">ItinÃ©raire</a>
+                                    </li>
+                                </ul>
+
+                            </div>
+                            <!-- Grid column -->
                         </div>
-                        <!-- Grid column -->
                     </div>
+                    <!-- Grid row -->
+
                 </div>
-                <!-- Grid row -->
-            </div>
-        </footer>
-        <!-- Footer -->
 
-    </div>
+            </footer>
+            <!-- Footer -->
 
 
-
+        </div>
+    </footer>
 
 
 
